IR: Code cleanup